module scaling added, no horizontal scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,8 @@ body {
   background: linear-gradient(
       to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
+      rgb(var(--background-end-rgb)),
+      rgb(var(--background-start-rgb))
     ),
     rgb(var(--background-start-rgb));
 }
@@ -34,5 +35,15 @@ html {
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+
+  /* Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
   }
 }
